--- a/style.css
+++ b/style.css
@@ -13,7 +13,10 @@ body{
     border-bottom: solid black 1px;
     gap: 10px;
     align-items: center;
-
+    position: sticky;
+    top: 0;
+    background-color: white;
+    z-index: 1;
 }
 .navbar__s1{
     padding-left: 10px;
@@ -44,6 +47,7 @@ body{
 .navbar__s2 input{
     border: none;
     width: 100%;
+    background-color: transparent;
 }
 .navbar__s2 input:focus{
     outline: none;
@@ -70,6 +74,25 @@ body{
     color: #a435fa;
     transform: scale(1.1);
 
+}
+.mylearn{
+    position: relative;
+    cursor: pointer;
+
+}
+.learn__popup{
+    position: absolute;
+    background-color: white;
+    color: black;
+    border: solid black 1px;
+    top: 150%;
+    padding: 20px;
+    right: 0;
+    display: none;
+
+}
+.mylearn:hover .learn__popup{
+    display: block;
 }
 
 
