--- a/style.css
+++ b/style.css
@@ -281,6 +281,9 @@ body{
     padding: 10px;
     width: 300px;
     height: 300px;
+    flex-grow: 1;
+    flex-basis: 20%;
+    margin: 5px;
     border: solid #dae1ed 2px;
     border-radius: 10px;
     transition: transform .2s;
@@ -421,3 +424,24 @@ body{
     margin: 5px;
     
 }
+
+/* Media Queries */
+@media screen and (max-width:800px) {
+      body{
+        font-size: 10px;
+
+      }
+}
+@media screen and (max-width:600px) {
+      .course-card{
+        flex-basis: 40%;
+      }
+      .categories{
+        display: none;
+      }
+      .navbar__s2,.navbar__s3{
+        display: none;
+      }
+}
+
+
